--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -183,12 +183,14 @@ body {
 h4 {
   margin: 0px 0px 25px 0px;
 }
+
 h3{
   font-family:gloock;
 }
 
 #PPMainTitle{
   margin:0px;
+  max-width:90%;
 }
 
 .involvmentList {
